# memento-mori

./: .dockerignore  .gitignore  Dockerfile  MAINTAINING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
memento_mori/: cli.py  extractor.py  flickr.py  generator.py  loader.py  merger.py
memento_mori/static/css/: style.css
memento_mori/static/js/: albums.js  editor-cities.js  editor-common.js  editor-flickr.js  editor.js  flickr-grid.js  flickr-viewer.js  map.js  modal.js  month-nav.js  on-this-day.js  posts-grid.js  stories-grid.js  stories.js  tags.js  timeline-months.js
memento_mori/templates/: _flickr_viewer.html  _footer.html  _header.html  _nav.html  _post_modal.html  _story_viewer.html  albums.html  cities.html  edit-cities.html  edit-flickr.html  edit.html  flickr.html  grid.html  index.html  map.html  posts.html  stories_page.html  tags.html  timeline.html
tests/: conftest.py  helpers.py  test_city_tags.py  test_extractor_validation.py  test_flickr_import.py  test_flickr_loader.py  test_flickr_only.py  test_fresh_build.py  test_generator_helpers.py  test_map_page.py  test_merger.py  test_migration.py  test_real_archive.py  test_regenerate_merge.py  test_theme.py
tests/browser/: conftest.py  test_smoke.py
